Fixed cropped emojis in thread list (mobile)

--- a/wcfsetup/install/files/style/ui/messageGroup.scss
+++ b/wcfsetup/install/files/style/ui/messageGroup.scss
@@ -273,6 +273,7 @@
 					
 					> a {
 						flex: 1 1 auto;
+						line-height: 1.48;
 						overflow: hidden;
 						text-overflow: ellipsis;
 						
